--- a/composer.json
+++ b/composer.json
@@ -16,16 +16,16 @@
     }
   ],
   "require": {
-    "php": "^5.6 || ^7.0",
-    "lcobucci/jwt": "^3.2.2",
+    "php": "^5.6 || ^7.0 || ^8.0",
+    "lcobucci/jwt": "^4.1.2",
     "league/oauth2-client": "^2.4.1",
-    "psr/log": "^1.0",
+    "psr/log": "^1.1.3",
     "ramsey/uuid": "^3.0 || ^4.0"
   },
   "require-dev": {
     "bramus/monolog-colored-line-formatter": "^2.0",
     "monolog/monolog": "^1.24",
-    "phpunit/phpunit": "^5.7",
+    "phpunit/phpunit": "^9.5.2",
     "satooshi/php-coveralls": "^1.0"
   },
   "autoload": {
